# EMG_motion_prediction

./: .env.example  pyproject.toml
src/config/: __init__.py  config.json  config.jsonc  load_config.py
src/dataset/: prediction_dataset.py  utils.py
src/utils/: logger.py
